hphp/test/zend/good/ext/gd/tests/bug42434.php.skipif
<?php
if (!extension_loaded('gd')) {
	die('skip gd extension not available');
}
if (!GD_BUNDLED) die("skip requires bundled GD library\n");
?>