hphp/test/zend/bad/ext/gd/tests/bug39780_extern.php.skipif
<?php
	if (!extension_loaded('gd')) die("skip gd extension not available\n");
	if (GD_BUNDLED) die("skip requires extern GD\n");
?>